# firecracker

./: CHANGELOG.md  Cargo.toml  FAQ.md  fio_perf_file.txt  fio_res_10loops.txt  fio_results_file.txt  fio_results_iod1.txt  fio_results_iod32.txt
api_server/: Cargo.toml
api_server/src/: http_service.rs  lib.rs
api_server/src/request/: drive.rs
api_server/swagger/: firecracker.yaml
devices/: Cargo.toml
devices/src/: lib.rs
devices/src/virtio/: block.rs
docs/: getting-started.md  jailer.md
encryption/: Cargo.toml
encryption/src/: ffi.rs  lib.rs
jailer/src/: env.rs  lib.rs
src/: main.rs
src/api_server/src/: lib.rs  parsed_request.rs
src/firecracker/src/: api_server_adapter.rs  main.rs
src/jailer/src/: main.rs
src/logger/src/: lib.rs  logger.rs  metrics.rs
src/polly/: Cargo.toml
src/polly/src/: epoll.rs  event_manager.rs  lib.rs  pollable.rs
src/seccomp/src/: lib.rs
src/utils/src/: arg_parser.rs
src/versionize/tests/: test.rs
src/vmm/src/: error.rs  lib.rs  resources.rs  rpc_interface.rs
tests/: pytest.ini
tests/framework/: jailer.py  microvm.py  resources.py  vm_config_perf.json
tests/host_tools/: logging.py
tests/integration_tests/functional/: test_api.py  test_cmd_line_start.py  test_logging.py
tests/integration_tests/performance/: config.fio  config_fio_read  config_fio_write  fio_graph.py  graph_rand_read.py  graph_rand_write.py  graph_seq_read.py  (+2 more)
tests/performance_results/: results_api_arm(ms)  results_api_local(ms)  results_config_file_arm(ms)  results_config_file_local(ms)
vmm/: Cargo.toml
vmm/src/: lib.rs
(+9 files in other folders)
