[package]
name = "encryption"
version = "0.1.0"
authors = ["Laura Loghin <laura.loghin@yahoo.com>"]
build = "build.rs"

[dependencies]
libc = "0.2"
logger = { path = "../logger" }
memory_model = { path = "../memory_model" }
serde = ">=1.0.27"
serde_derive = "=1.0.27"

[dev-dependencies]
libc = "0.2"
serde_json = ">=1.0.9"